# dungeons-and-dragons

./: .gitignore  README.md  dnd_prompt.txt  face_recognition.py  main.py  pyproject.toml  test_antenna_roll.py
.cursor/skills/reachy-dnd/: SKILL.md
src/: audio.py  dungeon_master.py  openclaw_client.py  player_registry.py  reachy_emotions.py  tts.py  voice_clone.py  voice_input.py  wake_word.py
src/models/: __init__.py  enums.py  game_state.py  game_tree.py  player.py  story.py
